# munchytech-invest

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
docs/: blueprint.md  dev_workflow.md  developement_logs.md  prd.md  tree.txt
mt_inv/: __init__.py
mt_inv/data_ingestion/: kite_connect_integration.py  order_book.py
mt_inv/tests/integration/: test_order_book_live.py
mt_inv/tests/unit/: test_kite_connect_integration.py  test_order_book.py
tests/unit/: test_kite_connect_integration.py
