[tool.poetry]
name = "quant-trading-engine"
version = "0.1.0"
description = "A modular, scalable, and AI-driven algorithmic trading system"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "mt_inv"}]

[tool.poetry.dependencies]
python = "^3.11"
kiteconnect = "^5.0.1"
pandas = "^2.2.3"
numpy = "^2.2.6"
pyspark = "^4.0.0"
pyarrow = "^20.0.0"
python-dotenv = "^1.1.0"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.25.0"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=."
